--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "start": "ts-node src/index.js"
   },
   "author": "yogananda",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^22.13.10"
+  },
+  "dependencies": {
+    "typescript": "^5.8.2"
+  }
 }
