--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "to provide reminder to user",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.js"
+    "start": "ts-node src/index.ts"
   },
   "author": "yogananda",
   "license": "ISC",
